Thu Dec 21 18:12:38 2000  Steve Huston  <shuston@riverace.com>

        * ace/ace-dll.icc, ace-lib.icc: Added OS_Errno.(cpp h) to the files
          list. Thanks to Jerry Odenwelder for pointing out the need for these.

Thu Dec 21 16:45:28 2000  Steve Huston  <shuston@riverace.com>

        * tests/Capabilities_Test.cpp: Added missing \n to a ACE_ERROR
          statement, and added ACE_DEFAULT_FILE_PERMS to the ACE_OS::open
          call to create the test file. It used to be 0600, but that was
          removed to satisfy Win32 which now pays attention to that arg.

Thu Dec 21 05:50:51 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Timer_Wheel_T.cpp (expire): Fixed a mistake where
	  next_earliest_time should have been next_earliest.  Thanks to
 	  Keith Brown <kalbrown@ix.netcom.com> for reporting this.

	* examples/IPC_SAP/SOCK_SAP/Makefile.bor: Reenable CPP-inserver-fancy.cpp
	  now that it compiles!  Thanks to Johnny Willemsen
 	  <johnny.willemsen@meco.nl> for confirming this.

	* examples/IPC_SAP/SOCK_SAP/CPP-inserver-fancy.cpp (handle_events): Added
	  casts for (SOCKET) when using FD_SET to work around problems
 	  with Borland.  Thanks to Johnny Willemsen
 	  <johnny.willemsen@meco.nl> for reporting this.

	* ace/Message_Block.h (ACE_Dynamic_Message_Strategy): Fixed a bunch
	  of non-const accessor methods to be const.  Thanks to Johnny
 	  Willemsen <johnny.willemsen@meco.nl> for reporting this.

	* examples/Naming/Makefile (BIN2): Added the test_open.cpp file
	  to the Makefile.  Thanks to Johnny Willemsen
 	  <johnny.willemsen@meco.nl> for reporting this.

	* docs/tutorials/016/page02.html: Clarify that signal() or
	  broadcast() don't release the mutex.  Thanks to Mike Curtis
 	  <mccurry@my-deja.com> for pointing this out.

Wed Dec 20 19:44:16 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor/test_abandoned.cpp,
	* examples/Reactor/WFMO_Reactor/test_directory_changes.cpp,