@@ -1105,6 +1105,7 @@ Kent Stewart <kbstew99@hotmail.com>
 Alexander Kogan <jk@kogan.nnov.ru>
 Michael Lindner <mikel@att.net>
 Arnaud Compan <compan@ipanematech.com>
+Frank A. Hunleth" <fhunleth@cs.wustl.edu>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
